Fix the "white space" design issue

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,8 +6,8 @@ $color4: #EDEDED; // Light Grey
 $color5: #BEBEBE; // Dark Grey
 
 // Colour variables
-$jangouts-bg: $color4;
-$jangouts-video-bg: $color4;
+$jangouts-bg: $color3;
+$jangouts-video-bg: $color3;
 
 body {
   background: $jangouts-bg;
@@ -36,6 +36,7 @@ body {
   align-content: flex-start;
   margin: 0 auto;
   overflow: hidden;
+  background-color: $color4;
 
   figure {
     margin: 0px;
@@ -112,6 +113,12 @@ body {
     &.sticky {
       border-color: $color1;
     }
+  }
+}
+
+@media(min-width:992px) {
+  #thumbnails {
+    height: 100vh;
   }
 }
 
@@ -319,14 +326,8 @@ footer {
 
 video {
   width: 100%;
-  background-color: $color3;
-}
-
-@media(min-width:992px) {
-  video {
-    height: 100vh;
-    padding: 0px;
-  }
+  margin: 0;
+  margin-bottom: -5px;
 }
 
 // Overriding of bootstrap's default negative margin, just a hack actually
@@ -578,22 +579,14 @@ kbd {
   .chat-header {
     height: 30px;
     cursor: pointer;
-    background: rgba($color3, 0.95);
+    background: rgba(black, 0.95);
     color: $color4;
     font-size: 12px;
     padding: 7px;
-    border: solid;
-    border-width: thin;
-    border-color: rgba($color5, 0.2);
-    border-bottom-style: hidden;
-
-    &:hover {
-    background: $color3;
-    }
   }
 
-  .chat-header.read {
-    background: rgba($color3, 0.95);
+  #chat-header.read {
+    background: rgba(black, 0.95);
   }
 
   .chat-header.unread {
